2007-12-21  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Move some code from configure.ac to test-local.mk.
	* configure.ac (ENABLE_HARD_ERRORS): Move to...
	* tests-local.mk: ... Here.

2007-12-21  Loic Fosse  <fosse@gostai.com>

	Add comments for translation of loopn.
	* src/parser/ugrammar.y: Here.

2007-12-21  Loic Fosse  <fosse@gostai.com>

	Fix error message about wrong flavor for at keyword.
	* src/parser/ugrammar.y: Here.

2007-12-21  Loic Fosse  <fosse@gostai.com>

	Use ast::While for loopn.
	* src/ast/ast.yml, src/runner/runner.cc, src/runner/runner.hh:
	Remove ast::Repeat.
	* src/parser/ugrammar.y: Expand for (integer) into a while instead of
	using ast::Repeat.

2007-12-21  mefyl  <mefyl@lrde.epita.fr>

	Declare XFAIL tests.
	* tests-local.mk: Declare failing 1.x tests as XFAIL.

2007-12-21  mefyl  <mefyl@lrde.epita.fr>

	Define TESTS_DIR.
	* tests-local.mk: Kernel 2 must pass 2.x and 1.x tests.

2007-12-21  mefyl  <mefyl@lrde.epita.fr>

	merge -r 2055:2066 https://svn.gostai.com/svn/kernel1/trunk
	2007-12-14  Guillaume Deslandes  <deslandes@gostai.com>
	Make good use of period in urbi-console.
	* src/console-server.cc: Here.
	The "utime() < startTime + period" test was never true.

	2007-12-14  Matthieu Nottale  <nottale@gostai.com>
	Fix loadFile which can be used for binaries.
	* include/kernel/userver.hh: Add extra parameter to loadFile to
	  specify Queue type.
	* src/uexpression.cc: Pass it.
	* src/userver.cc: Do not output #push and #pop to DATA queue.

	2007-12-14  Akim Demaille  <demaille@gostai.com>
	Let urbi-console support network connections.
	Subscribe to src/network
	* src/Makefile.am: Adjust.
	* src/console-server.cc: Improve cli to match ucore-pc's.

	2007-12-14  Akim Demaille  <demaille@gostai.com>
	Fix CPP guard.
	* include/kernel/userver.hh: here.

	2007-12-13  Akim Demaille  <demaille@gostai.com>
	Specify URBI_SERVER.
	* tests-local.mk: We use urbi-console.

2007-12-21  mefyl  <mefyl@lrde.epita.fr>
